--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://www.ruten.com.tw/css/m/v1/style-base.css?v=20170106_c369820c52" rel="stylesheet" type="text/css">
+</head>
 
+<body>
+
+    <nav class="rt-breadcrumb" data-module="rtm-breadcrumb">
+      <div class="rt-breadcrumb-home">
+        <a class="rt-breadcrumb-link" data-level="1" href="https://m.ruten.com.tw/class/category.php">
+          <i class="rti rti-home-subText"></i>
+          <i class="rti rti-angle-right-subText"></i>
+          <i class="rti rti-chevron-circle-left"></i>
+        </a>
+      </div>
+      <div class="rt-breadcrumb-wrap">
+        <ul class="rt-breadcrumb-list">
+          <li class="rt-breadcrumb-node">
+              <a class="rt-breadcrumb-link" data-level="2" data-type="breadcrumb-link" href="https://m.ruten.com.tw/class/category.php?c=0005"> 玩具、公仔  <i class="rti rti-angle-right-subText"></i>
+              </a>
+          </li>
+          <li class="rt-breadcrumb-node">
+              <a class="rt-breadcrumb-link" data-level="3" data-type="breadcrumb-link" href="https://m.ruten.com.tw/class/category.php?c=00050001"> 可動玩偶  <i class="rti rti-angle-right-subText"></i>
+              </a>
+          </li>
+          <li class="rt-breadcrumb-node">
+              <a class="rt-breadcrumb-link" data-level="4" data-type="breadcrumb-link" href="https://m.ruten.com.tw/class/category.php?c=000500010005"> 日系玩偶  <i class="rti rti-angle-right-subText"></i>
+              </a>
+          </li>
+          <li class="rt-breadcrumb-node">
+              <a class="rt-breadcrumb-link" data-level="5" data-type="breadcrumb-link" href="https://m.ruten.com.tw/class/category.php?c=0005000100050008"> 變形金剛  
+              </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+<link rel="stylesheet" href="https://www.ruten.com.tw/css/jquery-ui-1.9.0.custom.min.css">
+<link rel="stylesheet" href="https://www.ruten.com.tw/css/jquery.ui.theme.css">
+<script type="text/javascript" src="https://www.ruten.com.tw/js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" async="" src="script.js"></script>
+</body>
+</html>
