--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
       </div>
       <div class="rt-breadcrumb-wrap">
-        <ul class="rt-breadcrumb-list">
+        <ul class="rt-breadcrumb-list" style="    transition: all .5s cubic-bezier(.215,.61,.355,1) 0s;">
           <li class="rt-breadcrumb-node">
               <a class="rt-breadcrumb-link" data-level="2" data-type="breadcrumb-link" href="https://m.ruten.com.tw/class/category.php?c=0005"> 玩具、公仔  <i class="rti rti-angle-right-subText"></i>
               </a>
